// This is your Prisma schema file
// Database: SQLite
// Documentation: https://pris.ly/d/prisma-schema

generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider = "sqlite"
  url      = env("DATABASE_URL")
}

// ─────────────────────────────────────────────────────────────
// Modelo: Vaga
// Descrição: Representa uma vaga de emprego/estágio
// ─────────────────────────────────────────────────────────────
model Vaga {
  id            Int       @id @default(autoincrement())
  title         String    // Título da vaga
  company       String    // Empresa
  location      String    // Localização
  email         String    // Email de contato
  time          String    @default("Agora mesmo") // Tempo de publicação
  type          String    @default("Estágio") // Tipo: Estágio, Emprego, etc
  salary        String    @default("A combinar") // Salário
  target        String    // Público alvo / Requisitos de experiência
  desc          String    @default("") // Descrição completa
  requirements  String    @default("[]") // JSON array de requisitos
  benefits      String    @default("[]") // JSON array de benefícios
  createdAt     DateTime  @default(now()) @map("created_at")
  updatedAt     DateTime  @updatedAt @map("updated_at")

  // Relacionamentos
  candidaturas  Candidatura[]

  @@map("vagas")
}

// ─────────────────────────────────────────────────────────────
// Modelo: Candidato
// Descrição: Representa um candidato que aplica para vagas
// ─────────────────────────────────────────────────────────────
model Candidato {
  id            Int       @id @default(autoincrement())
  name          String    // Nome do candidato
  email         String    @unique // Email único
  phone         String    // Telefone
  location      String    // Localização
  resume        String    @default("") // CV/Currículo
  skills        String    @default("[]") // JSON array de skills
  experience    String    @default("") // Experiência profissional
  createdAt     DateTime  @default(now()) @map("created_at")
  updatedAt     DateTime  @updatedAt @map("updated_at")

  // Relacionamentos
  candidaturas  Candidatura[]

  @@map("candidatos")
}

// ─────────────────────────────────────────────────────────────
// Modelo: Candidatura
// Descrição: Relacionamento entre Vaga e Candidato
// Representa a aplicação de um candidato em uma vaga
// ─────────────────────────────────────────────────────────────
model Candidatura {
  id            Int       @id @default(autoincrement())
  vagaId        Int       @map("vaga_id")
  candidatoId   Int       @map("candidato_id")
  status        String    @default("Pendente") // Pendente, Aceito, Rejeitado
  coverLetter   String    @default("") @map("cover_letter") // Carta de apresentação
  appliedAt     DateTime  @default(now()) @map("applied_at")
  updatedAt     DateTime  @updatedAt @map("updated_at")

  // Relacionamentos
  vaga          Vaga      @relation(fields: [vagaId], references: [id], onDelete: Cascade)
  candidato     Candidato @relation(fields: [candidatoId], references: [id], onDelete: Cascade)

  @@map("candidaturas")
  @@unique([vagaId, candidatoId]) // Um candidato não pode aplicar 2x na mesma vaga
}

// ─────────────────────────────────────────────────────────────
// Modelo: Perfil
// Descrição: Perfil do usuário/estudante
// ─────────────────────────────────────────────────────────────
model Perfil {
  id            Int       @id @default(autoincrement())
  name          String    // Nome do usuário
  email         String    // Email
  course        String    // Curso
  campus        String    // Campus/Instituição
  status        String    @default("") // Status disponibilidade
  availability  String    @default("") // Disponibilidade
  createdAt     DateTime  @default(now()) @map("created_at")
  updatedAt     DateTime  @updatedAt @map("updated_at")

  @@map("perfil")
}

// ─────────────────────────────────────────────────────────────
// Modelo: Notification
// Descrição: Notificações do sistema
// ─────────────────────────────────────────────────────────────
model Notification {
  id            Int       @id @default(autoincrement())
  title         String    // Título da notificação
  message       String    // Mensagem/Conteúdo
  time          String    // Tempo da notificação
  createdAt     DateTime  @default(now()) @map("created_at")

  @@map("notifications")
}
