erDiagram
    VAGAS ||--o{ CANDIDATURAS : "tem"
    CANDIDATOS ||--o{ CANDIDATURAS : "faz"

    VAGAS {
        int id PK
        string title
        string company
        string location
        string email
        string time
        string type
        string salary
        string target
        string desc
        json requirements
        json benefits
        datetime created_at
        datetime updated_at
    }

    CANDIDATOS {
        int id PK
        string name
        string email UK
        string phone
        string location
        string resume
        json skills
        string experience
        datetime created_at
        datetime updated_at
    }

    CANDIDATURAS {
        int id PK
        int vaga_id FK
        int candidato_id FK
        string status
        string cover_letter
        datetime applied_at
        datetime updated_at
    }

    PERFIL {
        int id PK
        string name
        string email
        string course
        string campus
        string status
        string availability
        datetime created_at
        datetime updated_at
    }

    NOTIFICATIONS {
        int id PK
        string title
        string message
        string time
        datetime created_at
    }
